--- a/sites/all/themes/evatuning/css/dev.css
+++ b/sites/all/themes/evatuning/css/dev.css
@@ -235,3 +235,32 @@
 .submit_paypal img {
 	cursor: pointer;
 }
+ul.action-links {
+  margin: 20px 0 10px;
+  list-style-type: none;
+  display: inline-block;
+  list-style-type: none;
+  padding: 0px;
+}
+ul.action-links li {
+  float: left;/* LTR */
+  margin: 0 1em 0 0;/* LTR */
+}
+ul.action-links a{
+	background: #fff none repeat scroll 0 0;
+    border: 2px solid #0074bd;
+    border-radius: 100px;
+    display: block;
+    font-family: "Helvetica",sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 30px;
+    margin: 5px auto;
+    padding: 0 20px;
+    transition: all 0s ease 0s, all 0.3s ease 0s;
+    color: #0074BD;
+}
+ul.action-links a.active, ul.action-links a:hover{
+    background-color: #0074BD;
+    color:#ffffff;       
+}
